feat: Modify css variables (#1051)

--- a/packages/theme/base/src/base.less
+++ b/packages/theme/base/src/base.less
@@ -11,18 +11,15 @@
   --te-base-gray-30: #e6e6e6;
   --te-base-gray-40: #dbdbdb;
   --te-base-gray-50: #c2c2c2;
-  --te-base-gray-60: #808080;
-  --te-base-gray-70: #595959;
-  --te-base-gray-80: #333333;
-  --te-base-gray-90: #191919;
-  --te-base-gray-100: #000;
-  --te-base-gray-110: #b4b5b8;
-  --te-base-gray-120: #8b8c8f;
-  --te-base-gray-130: #4d4e52;
-  --te-base-gray-140: #36383d;
-  --te-base-gray-150: #2a2c31;
-  --te-base-gray-160: #212329;
-  --te-base-gray-170: #0f1115;
+  --te-base-gray-60: #b3b3b3;
+  --te-base-gray-70: #808080;
+  --te-base-gray-80: #595959;
+  --te-base-gray-90: #4d4d4d;
+  --te-base-gray-100: #333333;
+  --te-base-gray-110: #262626;
+  --te-base-gray-120: #1a1a1a;
+  --te-base-gray-125: #191919;
+  --te-base-gray-130: #000;
 
   // expand-red
   --te-base-red-10: #fff1f0;
@@ -35,11 +32,12 @@
   --te-base-red-80: #a3171c;
   --te-base-red-90: #78080e;
   --te-base-red-100: #4d0005;
-  --te-base-red-110: #a64242;
-  --te-base-red-120: #d4827f;
-  --te-base-red-130: #f2c5c2;
-  --te-base-red-140: rgba(242, 48, 48, 0.3);
-  --te-base-red-150: #330002;
+  --te-base-red-110: #33201e;
+  --te-base-red-120: #a64242;
+  --te-base-red-130: #b6332a;
+  --te-base-red-140: #d94838;
+  --te-base-red-150: #d4827f;
+  --te-base-red-160: #f2c5c2;
 
   // expand-orange
   --te-base-orange-10: #fff5e8;
@@ -123,14 +121,14 @@
   --te-base-green-40: #60d680;
   --te-base-green-50: #25c251;
   --te-base-green-60: #00b336;
-  --te-base-green-70: #029931;
-  --te-base-green-80: #01802b;
-  --te-base-green-90: #006624;
-  --te-base-green-100: #004a1b;
-  --te-base-green-110: #1d312a;
-  --te-base-green-120: #77c78f;
-  --te-base-green-130: #b8e6c7;
-  --te-base-green-140: rgba(92, 179, 54, 0.1);
+  --te-base-green-70: #39a632;
+  --te-base-green-80: #029931;
+  --te-base-green-90: #01802b;
+  --te-base-green-100: #006624;
+  --te-base-green-110: #004a1b;
+  --te-base-green-120: #273726;
+  --te-base-green-130: #77c78f;
+  --te-base-green-140: #b8e6c7;
 
   // expand-mint
   --te-base-mint-10: #e6fcfa;
@@ -164,24 +162,26 @@
 
   // expand-blue
   --te-base-blue-10: #f0f7ff;
-  --te-base-blue-20: #e7f1ff;
+  --te-base-blue-20: #deecff;
   --te-base-blue-30: #b3d6ff;
   --te-base-blue-40: #7eb7fc;
   --te-base-blue-50: #4191fa;
-  --te-base-blue-60: #1476ff;
-  --te-base-blue-70: #0f5ed4;
-  --te-base-blue-80: #0845a6;
-  --te-base-blue-90: #022e7a;
-  --te-base-blue-100: #001a4a;
-  --te-base-blue-110: #202b3f;
-  --te-base-blue-120: #7fa6d4;
-  --te-base-blue-130: #b6d4f2;
-  --te-base-blue-140: rgba(20, 118, 255, 0.1);
+  --te-base-blue-60: #317af7;
+  --te-base-blue-70: #1476ff;
+  --te-base-blue-80: #0f5ed4;
+  --te-base-blue-90: #0845a6;
+  --te-base-blue-100: #022e7a;
+  --te-base-blue-110: #001a4a;
+  --te-base-blue-120: #0a1831;
+  --te-base-blue-130: #7fa6d4;
+  --te-base-blue-140: #b6d4f2;
+  --te-base-blue-150: rgba(20, 118, 255, 0.1);
+  --te-base-blue-160: rgba(49, 122, 247, 0.1);
 
   // expand-indigo
   --te-base-indigo-10: #f0ebff;
   --te-base-indigo-20: #e2d9fc;
-  --te-base-indigo-30: #a790ff;
+  --te-base-indigo-30: #b9a6f7;
   --te-base-indigo-40: #9479f2;
   --te-base-indigo-50: #6e51e0;
   --te-base-indigo-60: #512fd6;
@@ -189,9 +189,10 @@
   --te-base-indigo-80: #27108f;
   --te-base-indigo-90: #19056e;
   --te-base-indigo-100: #0e004d;
-  --te-base-indigo-110: #2f2e3f;
-  --te-base-indigo-120: #847acc;
-  --te-base-indigo-130: #bbb8e6;
+  --te-base-indigo-110: #272635;
+  --te-base-indigo-120: #716acc;
+  --te-base-indigo-130: #847acc;
+  --te-base-indigo-140: #bbb8e6;
 
   // expand-purple
   --te-base-purple-10: #f9ebff;
