feat(refactor/theme): change incorrect css variables to the common variables and delete theme/base.less (#1049)

--- a/packages/theme/light/tutorial.less
+++ b/packages/theme/light/tutorial.less
@@ -1,5 +1,5 @@
 #tiny-engine-left-panel {
-  --ti-lowcode-tutorial-primary-text-color: var(--ti-lowcode-base-text-color-1);
-  --ti-lowcode-tutorial-primary-bg-color: var(--ti-lowcode-base-bg-5);
+  --ti-lowcode-tutorial-primary-text-color: var(--te-common-text-secondary);
+  --ti-lowcode-tutorial-primary-bg-color: var(--te-common-bg-default);
   --ti-lowcode-tutorial-hover-bg-color: var(--te-common-bg-container);
 }
