--- a/packages/theme/dark/tree.less
+++ b/packages/theme/dark/tree.less
@@ -1,7 +1,4 @@
 .outlinebox {
-  --ti-lowcode-tree-color: var(--ti-lowcode-common-secondary-text-color);
-  --ti-lowcode-tree-icon-color: rgba(138, 142, 153, 0.99);
-  --ti-lowcode-tree-icon-hover-color: var(--ti-lowcode-common-secondary-text-color);
-  --ti-lowcode-tree-selected-color: var(--ti-lowcode-common-text-color-3);
-  --ti-lowcode-tree-selected-bg: var(--ti-lowcode-common-primary-color);
+  --ti-lowcode-tree-icon-hover-color: var(--te-common-icon-hover);
+  --ti-lowcode-tree-border-color: transparent; // 亮色主题特有
 }
