--- a/packages/theme/light/tree.less
+++ b/packages/theme/light/tree.less
@@ -1,8 +1,4 @@
 .outlinebox {
-  --ti-lowcode-tree-color: var(--ti-lowcode-base-text-color);
-  --ti-lowcode-tree-icon-color: var(--ti-lowcode-base-primary-color-1);
-  --ti-lowcode-tree-icon-hover-color: var(--ti-lowcode-base-text-color-1);
-  --ti-lowcode-tree-selected-color: rgb(110, 81, 224);
-  --ti-lowcode-tree-selected-bg: rgb(240, 237, 252);
-  --ti-lowcode-tree-border-color: #ebebeb;
+  --ti-lowcode-tree-icon-hover-color: var(--te-common-icon-hover);
+  --ti-lowcode-tree-border-color: var(--te-common-border-default); // 亮色主题特有
 }
