--- a/packages/theme/light/variable.less
+++ b/packages/theme/light/variable.less
@@ -33,7 +33,7 @@
 
   // ------ 各个模块的主题色，前缀为 --ti-lowcode-模块名 -------
 
-  --ti-lowcode-design-plugin-color: var(--te-common-text-weaken);
+  --ti-lowcode-design-plugin-color: var(--te-common-text-primary);
 
   // 物料-组件列表
   --ti-lowcode-material-component-list-hover-bg: var(--te-common-bg-container);
@@ -114,7 +114,7 @@
 
   // -----下拉框相关主题配置-----
   // 左侧插件激活背景色
-  --ti-lowcode-left-panel-active-bg: var(--te-base-blue-20);
+  --ti-lowcode-left-panel-active-bg: var(--te-common-bg-container);
   // 左侧插件激活边框色
   --ti-lowcode-left-panel-active-border-color: #999;
   // 左侧tabs按钮边框色
