--- a/packages/theme/light/pageManage.less
+++ b/packages/theme/light/pageManage.less
@@ -1,8 +1,13 @@
 :root {
   --ti-lowcode-page-manage-title-background-text-color: var(--te-common-text-primary);
-  --ti-lowcode-page-manage-tip-text-color: var(--te-common-text-weaken);
+  --ti-lowcode-page-manage-tip-border-color: var(--te-common-text-weaken);
+  --ti-lowcode-page-manage-icon-text-color: var(--te-common-text-primary);
   --ti-lowcode-page-manage-tree-text-background-color: var(--te-common-bg-default);
   --ti-lowcode-page-manage-tree-node-background-color: var(--te-common-bg-default);
   --ti-lowcode-page-manage-text-color: var(--te-common-text-secondary);
   --ti-lowcode-page-manage-input-head-text-color: var(--te-common-text-primary);
+  --ti-lowcode-page-manage-btn-text-color: var(--te-common-text-weaken);
+  --ti-lowcode-page-manage-input-group-color: var(--te-common-bg-default);
+  --ti-lowcode-page-manage-input-group-border-color: var(--te-common-border-secondary);
+  --ti-lowcode-page-manage-input-group-border-right-color: var(--ti-lowcode-common-component-hover-bg);
 }
