--- a/packages/theme/dark/toolbar.less
+++ b/packages/theme/dark/toolbar.less
@@ -1,4 +1,4 @@
-.tiny-engine-toolbar {
+:root {
   // 头部工具栏
   --ti-lowcode-toolbar-border-bottom-color: var(--te-common-border-divider);
   --ti-lowcode-toolbar-title-color: var(--te-common-text-primary);
@@ -10,4 +10,8 @@
   --ti-lowcode-toolbar-user-img-border-color: var(--ti-lowcode-base-gray-20);
   --ti-lowcode-toolbar-dot-color: var(--te-common-color-error);
   --ti-lowcode-toolbar-right-line: var(--te-common-border-divider);
+  // 顶部按钮显示背景色
+  --ti-lowcode-toolbar-button-bg: var(--te-common-bg-prompt);
+  // 顶部隐藏导航栏按钮hover颜色
+  --ti-lowcode-toolbar-ellipsis-hover-bg: var(--te-common-bg-container);
 }
