--- a/packages/theme/base/src/page/base-config-page.less
+++ b/packages/theme/base/src/page/base-config-page.less
@@ -90,7 +90,6 @@ td {
 
 .tiny-svg,
 #tiny-engine .tiny-svg {
-  fill: currentColor !important;
   outline: none;
 }
 
@@ -257,4 +256,8 @@ td {
     transform: translateX(calc(4px - var(--base-right-panel-width)));
     height: calc(100% - var(--base-top-panel-height));
   }
+}
+
+.svg-currentcolor {
+  fill: currentColor;
 }
