feat: Module variable rectification

--- a/packages/theme/base/src/component-common.less
+++ b/packages/theme/base/src/component-common.less
@@ -230,6 +230,10 @@
       background-color: var(--te-common-bg-container);
       height: auto;
       text-align: center;
+      border: none;
+      &:hover {
+        color: var(--te-common-text-primary);
+      }
       &.is-active {
         color: var(--te-common-text-primary);
         background-color: var(--te-common-bg-default);
