feat: variable convergence(block, i18n, bridge, datasource, help, robot) (#1078)

--- a/packages/theme/base/src/common.less
+++ b/packages/theme/base/src/common.less
@@ -54,6 +54,10 @@
   --te-common-bg-popover: var(--te-base-gray-0); // 对话框/tooltip/popover背景 #fff
   --te-common-bg-text-emphasize: var(--te-base-blue-150); // 强调性文字背景色 rgba(20, 118, 255, 0.1)
   --te-common-bg-info: var(--te-base-blue-20); // 提示框info背景色 #deecff
+  --te-common-bg-scroll: var(--te-base-gray-40); // 滚动条默认背景色#dbdbdb
+  --te-common-bg-scroll-hover: var(--te-base-gray-50); // 滚动条默认背景色#c2c2c2
+
+  --te-common-shadow-panel: var(--te-base-box-shadow-rgba-3); // 面板阴影 rgba(0, 0, 0, 0.1)
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
@@ -113,6 +117,10 @@
   --te-common-bg-popover: var(--te-base-gray-100); // 对话框/tooltip/popover背景 #333333
   --te-common-bg-text-emphasize: var(--te-base-blue-160); // 强调性文字背景色 rgba(49, 122, 247, 0.1)
   --te-common-bg-info: var(--te-base-blue-120); // 提示框info背景色 #0A1831
+  --te-common-bg-scroll: var(--te-base-gray-110); // 滚动条默认背景色#262626
+  --te-common-bg-scroll-hover: var(--te-base-gray-100); // 滚动条默认背景色#333333
+
+  --te-common-shadow-panel: var(--te-base-box-shadow-rgba-4); // 面板阴影 rgba(0, 0, 0, 0.2)
 
   // 通用间距
   --te-common-vertical-item-spacing-normal: 12px; // 表单元素之间的距离，标题和列表之间的距离、一个独立元素的padding等等
