--- a/packages/theme/base/src/base.less
+++ b/packages/theme/base/src/base.less
@@ -242,6 +242,7 @@
   --te-base-box-shadow-rgba-1: rgba(25, 25, 25, 0.15);
   --te-base-box-shadow-rgba-2: rgba(0, 0, 0, 0.16);
   --te-base-box-shadow-rgba-3: rgba(0, 0, 0, 0.1);
+  --te-base-box-shadow-rgba-4: rgba(0, 0, 0, 0.2);
 
   /**
   * 1.1 行高
