feat: delete variable.less

--- a/packages/plugins/tree/src/styles/vars.less
+++ b/packages/plugins/tree/src/styles/vars.less
@@ -3,5 +3,5 @@
   --te-tree-icon-color: var(--te-common-icon-secondary);
   --te-tree-bg-color-active: var(--te-common-bg-container);
   --te-tree-text-color: var(--te-common-text-primary);
-  --te-tree-block-text-color: var(--te-common-color-prompt-secondary);
+  --te-tree-block-text-color: var(--te-common-text-purple);
 }
