--- a/packages/theme/base/src/base.less
+++ b/packages/theme/base/src/base.less
@@ -317,4 +317,9 @@
   --te-base-border-radius-2: 6px; // 圆角-2
   --te-base-border-radius-3: 8px; // 圆角-3
   --te-base-border-radius-4: 50%; // 圆形
+
+  /**
+  * 基础配置
+  **/
+  --te-base-min-width: 1280px;
 }
