feat: add base vars

--- a/packages/settings/styles/src/styles/vars.less
+++ b/packages/settings/styles/src/styles/vars.less
@@ -68,4 +68,10 @@
   // 样式面板-文本
   --te-styles-typography-bg-color: var(--te-common-bg-container);
   --te-styles-typography-bg-color-hover: var(--te-common-bg-gray-hover);
+
+  --te-styles-modal-padding-y: var(--te-base-modal-padding-y);
+  --te-styles-modal-padding-x: var(--te-base-modal-padding-x);
+  --te-styles-modal-right-offset-first: var(--te-base-modal-offset-1);
+  --te-styles-modal-right-offset-second: var(--te-base-modal-offset-2);
+  --te-styles-modal-spacing: var(--te-base-space-16);
 }
