--- a/packages/theme/base/src/base.less
+++ b/packages/theme/base/src/base.less
@@ -280,6 +280,7 @@
   --te-base-space-2: 2px; // 下拉面板距离上部输入框的间距
   --te-base-space-6: 6px; // 其他间距-3
   --te-base-space-10: 10px; // 其他间距-4
+  --te-base-space-16: 16px;
 
   /**
    * 1.3 字号
@@ -322,4 +323,8 @@
   * 基础配置
   **/
   --te-base-min-width: 1280px;
+  --te-base-modal-offset-1: 287px;
+  --te-base-modal-offset-2: 280px;
+  --te-base-modal-padding-y: 14px;
+  --te-base-modal-padding-x: 20px;
 }
