feat: Modify canvas divider vars

--- a/packages/canvas/styles/vars.less
+++ b/packages/canvas/styles/vars.less
@@ -31,6 +31,7 @@
   --te-canvas-container-border-color: var(--te-common-border-default);
 
   --te-canvas-container-bg-color: var(--te-common-bg-default);
+  --te-canvas-container-bg-color-white: var(--te-base-gray-0);
   --te-canvas-container-bg-color-hover: var(--te-common-bg-container);
   --te-canvas-container-bg-color-checked: var(--te-common-bg-primary-checked);
 
