--- a/packages/toolbars/themeSwitch/src/styles/vars.less
+++ b/packages/toolbars/themeSwitch/src/styles/vars.less
@@ -1,3 +1,6 @@
 .toolbar-theme-switch {
   --te-toolbar-theme-switch-radio-title: var(--te-common-text-secondary);
 }
+.theme-list {
+  --te-toolbar-theme-popover-list-item-bg-color-hover: var(--te-common-bg-container);
+}
